Added transactions adapter, setup transactions binding

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -23,8 +23,8 @@
             android:layout_marginStart="@dimen/margin_large"
             android:layout_marginTop="@dimen/margin_normal"
             android:layout_marginEnd="@dimen/margin_large"
-            android:text="@string/sign_out_button_caption"
             android:onClick="@{() -> viewModel.signOutButtonClicked()}"
+            android:text="@string/sign_out_button_caption"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -53,9 +53,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_small"
             android:layout_marginEnd="@dimen/margin_normal"
-            android:text="@{viewModel.firstName}"
             android:ellipsize="marquee"
             android:singleLine="true"
+            android:text="@{viewModel.firstName}"
             app:layout_constraintBottom_toBottomOf="@id/userFirstNameCaptionTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/verticalCenterGuideLine"
@@ -78,10 +78,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_small"
             android:layout_marginEnd="@dimen/margin_normal"
-            android:text="@{viewModel.lastName}"
             android:ellipsize="marquee"
             android:scrollHorizontally="true"
             android:singleLine="true"
+            android:text="@{viewModel.lastName}"
             app:layout_constraintBottom_toBottomOf="@id/userLastNameCaptionTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/verticalCenterGuideLine"
@@ -106,8 +106,8 @@
             android:layout_marginEnd="@dimen/margin_normal"
             android:ellipsize="marquee"
             android:scrollHorizontally="true"
-            android:text="@{viewModel.email}"
             android:singleLine="true"
+            android:text="@{viewModel.email}"
             app:layout_constraintBottom_toBottomOf="@id/userEmailCaptionTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/verticalCenterGuideLine"
@@ -115,10 +115,13 @@
             tools:text="john-smith@gmail.com" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/transactionsRecyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/margin_normal"
             android:layout_marginBottom="@dimen/margin_normal"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toTopOf="@+id/transactionsTotalCaptionTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -143,8 +146,8 @@
             android:layout_marginEnd="@dimen/margin_normal"
             android:ellipsize="marquee"
             android:scrollHorizontally="true"
-            android:text="@{viewModel.total}"
             android:singleLine="true"
+            android:text="@{viewModel.total}"
             app:layout_constraintBottom_toBottomOf="@id/transactionsTotalCaptionTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/verticalCenterGuideLine"
@@ -156,10 +159,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_normal"
+            android:onClick="@{() -> viewModel.startButtonClicked()}"
             android:singleLine="true"
             android:text="@string/start_button_caption"
             app:layout_constraintBottom_toBottomOf="@id/stopButton"
-            android:onClick="@{() -> viewModel.startButtonClicked()}"
             app:layout_constraintEnd_toStartOf="@id/stopButton"
             app:layout_constraintTop_toTopOf="@id/stopButton" />
 
@@ -168,9 +171,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_normal"
+            android:onClick="@{() -> viewModel.stopButtonClicked()}"
             android:text="@string/stop_button_caption"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:onClick="@{() -> viewModel.stopButtonClicked()}"
             app:layout_constraintEnd_toEndOf="@id/verticalCenterGuideLine"
             app:layout_constraintStart_toStartOf="@id/verticalCenterGuideLine" />
 
@@ -179,8 +182,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_normal"
-            android:text="@string/clear_button_caption"
             android:onClick="@{() -> viewModel.clearButtonClicked()}"
+            android:text="@string/clear_button_caption"
             app:layout_constraintBottom_toBottomOf="@+id/stopButton"
             app:layout_constraintStart_toEndOf="@+id/stopButton"
             app:layout_constraintTop_toTopOf="@+id/stopButton" />
