Improved item transaction layout

--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -21,7 +21,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_normal"
-            android:layout_weight="0.35"
+            android:layout_weight="0.25"
             android:ellipsize="marquee"
             android:scrollHorizontally="true"
             android:singleLine="true"
@@ -34,7 +34,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_small"
             android:layout_weight="0.15"
-            android:gravity="center"
+            android:ellipsize="marquee"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
             android:text="@{item.timeOutput}"
             tools:text="17:24" />
 
@@ -44,8 +46,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="@dimen/margin_small"
-            android:text="@{item.valueBtcOutput}"
             android:layout_weight="0.4"
+            android:ellipsize="marquee"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
+            android:text="@{item.valueBtcOutput}"
             tools:text="0.123456789 BTC" />
 
         <TextView
@@ -53,10 +58,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@{item.valueUsdOutput}"
             android:layout_marginStart="@dimen/margin_small"
             android:layout_marginEnd="@dimen/margin_normal"
-            android:layout_weight="0.2"
+            android:layout_weight="0.3"
+            android:ellipsize="marquee"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
+            android:text="@{item.valueUsdOutput}"
             tools:text="101.45 $" />
 
 
