--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
     <data>
 
-        <import type="android.view.View"/>
+        <import type="android.view.View" />
 
         <variable
             name="viewModel"
@@ -23,35 +24,35 @@
             android:id="@+id/emailTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_large"
             android:layout_marginBottom="@dimen/margin_normal"
             android:hint="@string/email_hint"
             android:importantForAutofill="no"
             android:inputType="textEmailAddress"
-            android:layout_marginTop="@dimen/margin_large"
             android:text="@={viewModel.eMailLiveData}"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/passwordTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_normal"
             android:hint="@string/password_hint"
             android:importantForAutofill="no"
             android:inputType="textVisiblePassword"
-            android:layout_marginTop="@dimen/margin_normal"
             android:text="@={viewModel.passWordLiveData}"
-            app:layout_constraintTop_toBottomOf="@id/emailTextView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/emailTextView" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/submitButton"
-            android:enabled="@{!viewModel.showProgressLiveData}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_normal"
+            android:enabled="@{!viewModel.showProgressLiveData}"
             android:onClick="@{() -> viewModel.signInButtonClicked()}"
             android:text="@string/sign_in_button_caption"
             app:layout_constraintEnd_toEndOf="parent"
@@ -60,11 +61,11 @@
 
         <ProgressBar
             android:layout_width="wrap_content"
-            android:visibility="@{viewModel.showProgressLiveData ? View.VISIBLE : View.INVISIBLE, default = invisible}"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/submitButton"
-          android:layout_marginTop="@dimen/margin_normal"
+            android:layout_marginTop="@dimen/margin_normal"
+            android:visibility="@{viewModel.showProgressLiveData ? View.VISIBLE : View.INVISIBLE, default = invisible}"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/submitButton" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
