Added websocket adapter

--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="api_base_url" translatable="false">https://api.dev.karta.com/</string>
+    <string name="wss_base_url" translatable="false">wss://ws.blockchain.info/inv</string>
 </resources>
