--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -4,8 +4,18 @@
     <data>
 
         <variable
-            name="item"
-            type="com.testtask.ui.model.TransactionItem" />
+            name="hashOutput"
+            type="String" />
+
+        <variable
+            name="timeOutput"
+            type="String" />
+
+        <variable
+            name="valueOutput"
+            type="String" />
+
+
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -21,11 +31,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_normal"
-            android:layout_weight="0.25"
+            android:layout_weight="0.5"
             android:ellipsize="marquee"
             android:scrollHorizontally="true"
             android:singleLine="true"
-            android:text="@{item.hashOutput}"
+            android:text="@{hashOutput}"
             tools:text="2j2l2k3kj2l2k3jl2222423423242l" />
 
         <TextView
@@ -33,11 +43,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_small"
-            android:layout_weight="0.15"
+            android:layout_weight="0.2"
             android:ellipsize="marquee"
             android:scrollHorizontally="true"
             android:singleLine="true"
-            android:text="@{item.timeOutput}"
+            android:text="@{timeOutput}"
             tools:text="17:24" />
 
         <TextView
@@ -46,26 +56,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="@dimen/margin_small"
-            android:layout_weight="0.4"
-            android:ellipsize="marquee"
-            android:scrollHorizontally="true"
-            android:singleLine="true"
-            android:text="@{item.valueBtcOutput}"
-            tools:text="0.123456789 BTC" />
-
-        <TextView
-            android:id="@+id/valueUsd"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="@dimen/margin_small"
-            android:layout_marginEnd="@dimen/margin_normal"
             android:layout_weight="0.3"
             android:ellipsize="marquee"
             android:scrollHorizontally="true"
+            android:layout_marginEnd="@dimen/margin_normal"
             android:singleLine="true"
-            android:text="@{item.valueUsdOutput}"
-            tools:text="101.45 $" />
+            android:text="@{valueOutput}"
+            tools:text="0.123456789" />
 
 
     </LinearLayout>
