--- a/app/src/main/res/layout-land/fragment_auth.xml
+++ b/app/src/main/res/layout-land/fragment_auth.xml
@@ -35,7 +35,7 @@
             android:hint="@string/email_hint"
             android:importantForAutofill="no"
             android:inputType="textEmailAddress"
-            android:text="@={viewModel.eMailLiveData}"
+            android:text="@={viewModel.email}"
             app:layout_constraintEnd_toStartOf="@id/centerVerticalGuideLine"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -49,7 +49,7 @@
             android:hint="@string/password_hint"
             android:importantForAutofill="no"
             android:inputType="textVisiblePassword"
-            android:text="@={viewModel.passWordLiveData}"
+            android:text="@={viewModel.password}"
             app:layout_constraintBottom_toBottomOf="@id/emailTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/centerVerticalGuideLine"
