--- a/app/src/main/res/layout/item_transaction_header.xml
+++ b/app/src/main/res/layout/item_transaction_header.xml
@@ -11,7 +11,6 @@
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -27,8 +26,7 @@
             android:ellipsize="marquee"
             android:scrollHorizontally="true"
             android:singleLine="true"
-            android:text="@{item.hashOutput}"
-            tools:text="2j2l2k3kj2l2k3jl2222423423242l" />
+            android:text="@string/hash_caption" />
 
         <TextView
             android:id="@+id/time"
@@ -39,8 +37,7 @@
             android:ellipsize="marquee"
             android:scrollHorizontally="true"
             android:singleLine="true"
-            android:text="@{item.timeOutput}"
-            tools:text="17:24" />
+            android:text="@string/time_caption" />
 
         <TextView
             android:id="@+id/valueBtc"
@@ -53,9 +50,7 @@
             android:ellipsize="marquee"
             android:scrollHorizontally="true"
             android:singleLine="true"
-            android:text="@{String.format(@string/default_floating_point_format,item.valueBtcOutput)}"
-            tools:text="0.123456789" />
-
+            android:text="@string/btc_caption" />
 
     </LinearLayout>
 
