--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/startingFragment"
-        android:name="com.testtask.ui.fragment.starting.StartingFragment"
+        android:name="com.testtask.ui.main.starting.StartingFragment"
         tools:layout="@layout/fragment_starting">
 
         <action
@@ -16,25 +16,25 @@
 
         <action
             android:id="@+id/action_startingFragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
+            app:destination="@id/dashboardFragment" />
 
     </fragment>
 
     <fragment
         android:id="@+id/authFragment"
-        android:name="com.testtask.ui.fragment.auth.AuthFragment"
+        android:name="com.testtask.ui.main.auth.AuthFragment"
         tools:layout="@layout/fragment_auth">
 
         <action
             android:id="@+id/action_authFragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
+            app:destination="@id/dashboardFragment" />
 
     </fragment>
 
     <fragment
-        android:id="@+id/mainFragment"
-        android:name="com.testtask.ui.fragment.main.MainFragment"
-        tools:layout="@layout/fragment_main">
+        android:id="@+id/dashboardFragment"
+        android:name="com.testtask.ui.main.dashboard.DashboardFragment"
+        tools:layout="@layout/fragment_dashboard">
 
         <action
             android:id="@+id/action_mainFragment_to_authFragment"
